# goit-pythonweb-hw-12

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  test_users.py
alembic/: env.py
alembic/versions/: 35fe52c3b80a_add_refresh_tokens.py  6fea2a2d53c9_init.py  77ca74675fee_change_user_fullname_to_user_username.py  81646392e02a_add_user.py  c3e18b524a2b_add_user_role.py
docs/source/: conf.py  index.rst
src/api/: __init__.py  auth.py  contacts.py  users.py
src/conf/: config.py
src/core/: depend_service.py  email_token.py
src/database/: db.py
src/entity/: models.py
src/repositories/: base.py  contacts.py  refresh_token.py  users.py
src/schemas/: contact.py  email.py  token.py  user.py
src/services/: auth.py  contacts.py  email.py  upload_file_service.py  user.py
src/services/templates/: reset_password_email.html
tests/: conftest.py  test_models.py  test_schemas.py
tests/repositories/: test_contacts.py  test_refresh_token.py  test_users_repositories.py
tests/services/: test_auth_service.py  test_contact_service.py  test_user_services.py
