[project]
name = "goit-pythonweb-hw-10"
version = "0.1.0"
description = ""
authors = [
    {name = "Nataliia Smalchenko",email = "daalang@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
package-mode = false
dependencies = [
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "redis-lru (>=0.1.2,<0.2.0)",
    "cloudinary (>=1.44.0,<2.0.0)",
    "fastapi-mail (>=1.4.2,<2.0.0)",
    "libgravatar (>=1.0.4,<2.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
